# rust-quant-bot-v2

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  STRATEGIE.md  scenarios.json
analysis/: chasse_baleines.py  chasse_baleines_scan_20260722.txt  observer_b27b.py  replay_harness.py  spread_capture_replay.py
analysis/observer/: dashboard.html  mesure_0xb.py  test_regle_paire.py
analysis/observer/data/: live.json  summary.json  window_1783011600.json  window_1783011900.json  window_1783012200.json  window_1783012500.json  window_1783012800.json  window_1783013100.json  window_1783013400.json  window_1783013700.json  window_1783014000.json  window_1783014300.json  window_1783014600.json  window_1783014900.json  window_1783015200.json  window_1783015500.json  window_1783016100.json  window_1783016400.json  window_1783016700.json  window_1783017000.json  window_1783017300.json  window_1783017600.json
backend/: .env.example  Cargo.toml
backend/data/: live_paper_state.json  live_paper_trades.jsonl
backend/src/: bankroll.rs  config.rs  dashboard.rs  execution.rs  inventory.rs  logbuf.rs  main.rs  signal.rs  types.rs
backend/src/connectors/: binance.rs  mod.rs  pm_ws.rs  polymarket.rs
backend/src/engines/: drift.rs  mod.rs  ofi.rs  pair_gtc.rs  pricing.rs  radar.rs  risk.rs  spread_capture.rs
backend/src/live/: auth.rs  engine.rs  mod.rs  orders.rs  relayer.rs  user_ws.rs
backend/src/roles/: executor.rs  executor_gtc.rs  mod.rs  radar.rs
data/: params_changes.jsonl  sniper_state_lat.json  sniper_state_lat100.json  sniper_state_prop.json  sniper_state_v1.json  sniper_state_v2.json  sniper_state_v3.json  sniper_trades_lat.jsonl  sniper_trades_lat100.jsonl  sniper_trades_prop.jsonl  sniper_trades_v1.jsonl  sniper_trades_v2.jsonl  sniper_trades_v3.jsonl
data/backup_reset_20260701_024959/: sniper_state.json  sniper_state_20.json  sniper_state_prop.json  sniper_state_sel.json  sniper_trades.jsonl  sniper_trades_20.jsonl  sniper_trades_prop.jsonl  sniper_trades_sel.jsonl
deploy/: DEPLOY.md  README-hft-deploy.md  build.sh  ctl.sh  deploy.sh  dublin-live.env.example  dublin.env.example  hosts.env.example  poly-executor.service  poly-live.service  poly-radar.service  preflight.sh  rollback.sh  rust-quant-bot-executor.service  rust-quant-bot-live.service  rust-quant-bot-paper.service  rust-quant-bot-radar.service  tokyo.env.example
docs/: ARCHITECTURE.md  CHANGELOG.md  MATH.md  METAMASK-SETUP.md  RUNBOOK.md  STRATEGY.md  predictive-stack.md
frontend/: app.js  index.html  radar.html  radar.js  style.css
scripts/: calibrate.py  derive_poly_creds.py  rejudge.py
src/: config.rs  dashboard.rs  error.rs  latency.rs  logbuffer.rs  main.rs  recorder.rs  resolution.rs  series.rs  state.rs  tuning.rs
src/binance/: local_book.rs  math_engine.rs  mod.rs  trade_feed.rs  websocket.rs
src/concurrency/: bus.rs
src/net/: mod.rs  udp.rs  wire.rs
src/okx/: websocket.rs
src/polymarket/: cli.rs  live_executor.rs  mod.rs  order_engine.rs  pm_poller.rs  pm_user_ws.rs  pm_websocket.rs  poly1271.rs  relayer.rs
src/pricing/: black_scholes.rs  mod.rs  volatility.rs
src/roles/: executor.rs  live.rs  mod.rs  paper.rs  radar.rs
src/signal/: basis.rs  composite.rs  consolidated_obi.rs  kalman.rs  mod.rs
src/strategy/: bankroll.rs  live_position.rs  mod.rs  sniper.rs
