[package]
name = "rust-quant-bot"
version = "2.0.0"
edition = "2021"
authors = ["Engineering Team <quant@internal.com>"]

[dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
statrs = "0.16"           # CDF normale (Black-Scholes)
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }

# Auth L2 Polymarket (HMAC-SHA256 des en-têtes /order).
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"              # salt CSPRNG des ordres (nonce)

# Signing EIP-712 (live) — derrière la feature `live` pour ne pas alourdir le build par défaut.
# Meta-crate alloy en features minimales (signing seul, sans le stack RPC/providers).
# ⚠️ alloy 2.1 requiert rustc ≥ 1.91. La feature `live` ne compile donc QUE sur un toolchain récent
# (les nœuds AWS via rustup l'ont ; le build paper par défaut, lui, reste sur n'importe quel rustc).
alloy = { version = "2.1", default-features = false, features = ["signer-local", "sol-types"], optional = true }
polymarket_client_sdk_v2 = { version = "0.6.0-canary.1", default-features = false, features = ["clob"], optional = true }

[features]
default = []
# `cargo build --features live` : signature EIP-712 (alloy) + SDK Polymarket (POLY_1271 / sig_type=3).
live = ["dep:alloy", "dep:polymarket_client_sdk_v2"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
